--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.golonzovsky</groupId>
     <artifactId>deployme</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>deployme</name>
@@ -47,7 +47,7 @@
     <scm>
         <connection>scm:git:https://github.com/golonzovsky/deployme.git </connection>
         <developerConnection>scm:git:https://github.com/golonzovsky/deployme.git</developerConnection>
-      <tag>deployme-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <build>
