info project version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-management.info.git.mode=full
+#management.info.git.mode=full
+
+info.project.name=@project.name@
+info.project.version=@project.version@
