--- a/child/pom.xml
+++ b/child/pom.xml
@@ -4,23 +4,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.golonzovsky</groupId>
-    <artifactId>deployme</artifactId>
+    <artifactId>deployme-child-module</artifactId>
     <version>0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
     <description>Deployment sandbox</description>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+      <groupId>com.golonzovsky</groupId>
+        <artifactId>deployme</artifactId>
+        <version>0-SNAPSHOT</version>
     </parent>
-
-    <modules>
-        <module>child</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
