--- a/pom.xml
+++ b/pom.xml
@@ -78,8 +78,7 @@
                 <artifactId>maven-scm-plugin</artifactId>
                 <version>1.9.5</version>
                 <configuration>
-                    <goals>install</goals>
-                    <tag>${project.artifactId}-${project.version}</tag>
+                    <tag>${project.version}</tag>
                 </configuration>
             </plugin>
         </plugins>
