remove mvn site

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 image: maven:3.3.9-jdk-8
 
-# Default stages
+# Default stages, this list can be removed
 stages:
   - build
   - test
@@ -27,10 +27,9 @@ verify:jdk8:
 # To get this working you need to define a volume while configuring your gitlab-ci-multi-runner.
 # Mount your `settings.xml` as `/root/.m2/settings.xml` which holds your secrets.
 deploy:jdk8:
-  # Use stage test here, so the pages job may later pickup the created site.
   stage: deploy
   script:
-    - 'mvn $MAVEN_CLI_OPTS deploy site site:stage'
+    - 'mvn $MAVEN_CLI_OPTS deploy'
   only:
     - master
   # Archive up the built documentation site.
